# SUN-EM

./: .gitignore
examples/example-1/: dipoles.mom  strip_dipole_driver.m
examples/example-10/: pec_plate.mom  pec_plate.sol  pec_plate_driver.m  pec_plate_fine_mesh.mom  pec_plate_super_fine_mesh.mom
examples/example-11/: sphere.cfx  sphere.m  sphere.mom  sphere.pre
examples/example-12/: pec_plate.mom  pec_plate.pre  pec_plate_driver.m
src/: sunem_setup.m
src/CPPMoMinterface/: README.md  roadmap.md
src/CPPMoMinterface/content/CPPMoMsolver/: CMakeLists.txt  build.sh  build_mpi.sh
src/CPPMoMinterface/content/CPPMoMsolver/src/: edge.cpp  edge.h  main.cpp  mom_data.cpp  mom_data.h  mom_file_reader.cpp  mom_file_reader.h  mom_file_writer.cpp  mom_file_writer.h  mom_solver.cpp  mom_solver.h  node.cpp  node.h  quadrature.cpp  quadrature.h  timer.cpp  timer.h  triangle.cpp  triangle.h  vrhs.cpp  vrhs.h
src/CPPMoMinterface/content/CPPMoMsolver/src/mpi/: main_mpi.cpp  mom_solver_mpi.cpp  mom_solver_mpi.h
src/CPPMoMinterface/content/MatlabCppHelpers/: calculateVrhsProper.m  readFileFromCpp.m  runCppMoMSolver.m  writeFileForCpp.m
src/FEKOinterface/: parseFEKOoutfile.m
src/Tools/: runEMsolvers.m  sunem_init.m
src/dBMoMinterface/: FillZMatrixByEdge.m
